compiler/test/programs/syntax_error/duplicate_ids_in_block.fl
<?xml version="1.0" encoding="UTF-8"?>
<fluir >
    <function
        name="main"
        id="1"
        x="15"
        y="7"
        z="3"
        w="100"
        h="100">
        <body>
            <constant
                id="2"
                x="0"
                y="10"
                z="2"
                w="5"
                h="5">
                <float>1.0</float>
            </constant>
            <constant
                id="2"
                x="0"
                y="10"
                z="3"
                w="5"
                h="5">
                <float>2.0</float>
            </constant>
        </body>
    </function>

    <function
        name="other"
        id="2"
        x="250"
        y="493"
        z="2"
        w="130"
        h="100">
        <body>
            <constant
                id="1"
                x="0"
                y="10"
                z="2"
                w="5"
                h="5">
                <float>1.0</float>
            </constant>
            <constant
                id="3"
                x="0"
                y="10"
                z="3"
                w="5"
                h="5">
                <float>2.0</float>
            </constant>
            <binary
                id="1"
                x="0"
                y="20"
                z="2"
                w="7"
                h="7"
                lhs="2"
                rhs="3"
                operator="-" />
        </body>
    </function>
</fluir>
